--- a/drivers/misc/mediatek/sensors-1.0/accelerometer/bma4xy/Kconfig
+++ b/drivers/misc/mediatek/sensors-1.0/accelerometer/bma4xy/Kconfig
@@ -2,18 +2,12 @@
 # Makefile for Bosch sensors driver.
 #
 
-config MTK_BMA4XY
+config SENSORS_BMA4XY
 	tristate "BMA4XY acceleration sensor support"
 	depends on I2C
 	help
 	  If you say yes here, you get support for Bosch Sensortec's
 	  acceleration sensors BMA4XY.
 
-config MTK_BMA4XY_CLIENT_DTS
-	tristate "BMA4XY acceleration sensor support"
-	depends on I2C
-	select MTK_BMA4XY
-	help
-	  If you say yes here, you get support for Bosch Sensortec's
-	  acceleration sensors BMA4XY.
+
 
