bma4xy: Fix acceleration sensor for 4.14 kernel
Some functionality is still missing and will be implemented in future commits

--- a/drivers/misc/mediatek/sensors-1.0/accelerometer/bma4xy/Kconfig
+++ b/drivers/misc/mediatek/sensors-1.0/accelerometer/bma4xy/Kconfig
@@ -1,13 +1,6 @@
-#
-# Makefile for Bosch sensors driver.
-#
-
-config SENSORS_BMA4XY
+config MTK_BMA4XY
 	tristate "BMA4XY acceleration sensor support"
 	depends on I2C
 	help
 	  If you say yes here, you get support for Bosch Sensortec's
 	  acceleration sensors BMA4XY.
-
-
-
