--- a/drivers/misc/mediatek/sensors-1.0/accelerometer/bma4xy/Makefile
+++ b/drivers/misc/mediatek/sensors-1.0/accelerometer/bma4xy/Makefile
@@ -1,7 +1,7 @@
-ccflags-y += -I$(srctree)/drivers/misc/mediatek/sensor_bio/accelerometer/inc
-ccflags-y += -I$(srctree)/drivers/misc/mediatek/sensor_bio/hwmon/include
-ccflags-y += -I$(srctree)/drivers/misc/mediatek/sensor_bio/step_counter
-ccflags-y += -I$(srctree)/drivers/misc/mediatek/sensor_bio/wake_gesture
-ccflags-y += -I$(srctree)/drivers/misc/mediatek/sensor_bio/tilt_detector
-obj-y	:=  bma4.o bma423.o bma4xy_driver.o 
+ccflags-y += -I$(srctree)/drivers/misc/mediatek/sensors-1.0/accelerometer/inc
+ccflags-y += -I$(srctree)/drivers/misc/mediatek/sensors-1.0/hwmon/include
+ccflags-y += -I$(srctree)/drivers/misc/mediatek/sensors-1.0/step_counter
+#ccflags-y += -I$(srctree)/drivers/misc/mediatek/sensors-1.0/wake_gesture
+#ccflags-y += -I$(srctree)/drivers/misc/mediatek/sensors-1.0/tilt_detector
 
+obj-y := bma4.o bma423.o bma4xy_i2c.o bma4xy_driver.o
