--- a/arch/arm64/boot/dts/mediatek/c7s.dts
+++ b/arch/arm64/boot/dts/mediatek/c7s.dts
@@ -89,13 +89,14 @@
 
 &i2c1 {
 /*  start sensor */
-	gsensor@4c {
+	gsensor@18 {
+		compatible = "mediatek,bma4xy";
 		i2c_num	= <1>;
-		direction = <6>;
+		direction = <3>;
 		power_id = <0xffff>;
 		power_vol = <0>;
-		firlen = <16>;
-		is_batch_supported = <1>;
+		firlen = <0>;
+		is_batch_supported = <0>;
 	};
 
 	msensor@0c {
