--- a/arch/arm64/configs/c7s_defconfig
+++ b/arch/arm64/configs/c7s_defconfig
@@ -138,6 +138,9 @@ CONFIG_CUSTOM_KERNEL_MAGNETOMETER=y
 CONFIG_MTK_HWMON=y
 CONFIG_CUSTOM_KERNEL_BAROMETER=y
 # CONFIG_MTK_BMP280_NEW is not set
+CONFIG_CUSTOM_KERNEL_STEP_COUNTER=y
+CONFIG_CUSTOM_KERNEL_SIGNIFICANT_MOTION=y
+CONFIG_CUSTOM_KERNEL_TILT_DETECTOR_SENSOR=y
 CONFIG_MTK_COMBO=y
 CONFIG_MTK_COMBO_CHIP_CONSYS_6739=y
 CONFIG_MTK_COMBO_BT=y
