--- a/drivers/misc/mediatek/sensors-1.0/accelerometer/bma4xy/Makefile
+++ b/drivers/misc/mediatek/sensors-1.0/accelerometer/bma4xy/Makefile
@@ -2,6 +2,6 @@ ccflags-y += -I$(srctree)/drivers/misc/mediatek/sensors-1.0/accelerometer/inc
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/sensors-1.0/hwmon/include
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/sensors-1.0/step_counter
 #ccflags-y += -I$(srctree)/drivers/misc/mediatek/sensors-1.0/wake_gesture
-#ccflags-y += -I$(srctree)/drivers/misc/mediatek/sensors-1.0/tilt_detector
+ccflags-y += -I$(srctree)/drivers/misc/mediatek/sensors-1.0/tilt_detector_sensor
 
 obj-y := bma4.o bma423.o bma4xy_i2c.o bma4xy_driver.o
