sensors-1.0: Add heartrate driver

--- a/arch/arm64/configs/c7s_defconfig
+++ b/arch/arm64/configs/c7s_defconfig
@@ -133,6 +133,8 @@ CONFIG_CUSTOM_KERNEL_ALSPS=y
 # CONFIG_MTK_CM36558 is not set
 CONFIG_CUSTOM_KERNEL_GYROSCOPE=y
 # CONFIG_MTK_ITG1010 is not set
+CONFIG_CUSTOM_KERNEL_HEART=y
+CONFIG_MTK_PAH8001=y
 CONFIG_CUSTOM_KERNEL_MAGNETOMETER=y
 # CONFIG_MTK_AKM09918 is not set
 CONFIG_MTK_HWMON=y
