pah8001: Cleaned up driver, added DTS support

--- a/drivers/misc/mediatek/sensors-1.0/heart_rate/pah8001/Makefile
+++ b/drivers/misc/mediatek/sensors-1.0/heart_rate/pah8001/Makefile
@@ -1,2 +1,4 @@
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/sensors-1.0/hwmon/include
-obj-y := pixart_pah8001.o
+ccflags-y += -I$(srctree)/drivers/misc/mediatek/sensors-1.0/heart_rate
+
+obj-y := pah8001_driver.o pah8001_led_ctrl.o
