--- a/drivers/misc/mediatek/sensors-1.0/heart_rate/pah8001/Kconfig
+++ b/drivers/misc/mediatek/sensors-1.0/heart_rate/pah8001/Kconfig
@@ -1,5 +1,6 @@
 config MTK_PAH8001
-	bool "Sensor driver for Pixart PAH8001"
+	bool "Enable heartrate sensor for PixArt PAH8001"
+	depends on I2C
 	default n
 	help
-	  Say Y here if you have a Pixart PAH8001 heart rate sensor.
+	  Enable heartrate sensor for PixArt PAH8001
