c7s: Add LEM8 lcm to the build

--- a/arch/arm64/configs/c7s_defconfig
+++ b/arch/arm64/configs/c7s_defconfig
@@ -116,13 +116,13 @@ CONFIG_MTK_IMGSENSOR=y
 CONFIG_MTK_JPEG=y
 CONFIG_MTK_SMI_EXT=y
 CONFIG_MTK_LCM=y
-CONFIG_CUSTOM_KERNEL_LCM="st7797_400x400_dsi_vdo"
+CONFIG_CUSTOM_KERNEL_LCM="st7797_400x400_dsi_vdo rm67162_400x400_dsi_cmd_oled_hehui"
 CONFIG_MTK_FB=y
 CONFIG_MTK_LCM_PHYSICAL_ROTATION="0"
 # CONFIG_MTK_LCM_PHYSICAL_ROTATION_HW is not set
 CONFIG_LCM_HEIGHT="400"
 CONFIG_LCM_WIDTH="400"
-CONFIG_MTK_AAL_SUPPORT=y
+# CONFIG_MTK_AAL_SUPPORT is not set
 # CONFIG_MMPROFILE is not set
 CONFIG_MTK_SENSOR_SUPPORT=y
 CONFIG_MTK_SENSORS_1_0=y
@@ -133,7 +133,7 @@ CONFIG_CUSTOM_KERNEL_ALSPS=y
 # CONFIG_MTK_CM36558 is not set
 CONFIG_CUSTOM_KERNEL_GYROSCOPE=y
 # CONFIG_MTK_ITG1010 is not set
-CONFIG_CUSTOM_KERNEL_HEART=y
+CONFIG_CUSTOM_KERNEL_HEART_RATE_SENSOR=y
 CONFIG_MTK_PAH8001=y
 CONFIG_CUSTOM_KERNEL_MAGNETOMETER=y
 # CONFIG_MTK_AKM09918 is not set
@@ -150,8 +150,7 @@ CONFIG_MTK_COMBO_GPS=y
 CONFIG_MTK_COMBO_WIFI=y
 CONFIG_MTK_DHCPV6C_WIFI=y
 CONFIG_MTK_GPS_SUPPORT=y
-CONFIG_MTK_FMRADIO=y
-CONFIG_MTK_FM_CHIP="MT6625_FM"
+# CONFIG_MTK_FMRADIO is not set
 CONFIG_MTK_MD1_SUPPORT=12
 CONFIG_MTK_ECCCI_DRIVER=y
 CONFIG_MTK_ECCCI_C2K=y
@@ -242,7 +241,7 @@ CONFIG_SPI=y
 CONFIG_SPI_MT65XX=y
 CONFIG_MTK_GAUGE_VERSION=30
 CONFIG_MTK_CHARGER=y
-CONFIG_MTK_SWCHR_SUPPORT=y
+# CONFIG_MTK_SWCHR_SUPPORT is not set
 CONFIG_MTK_KERNEL_POWER_OFF_CHARGING=y
 # CONFIG_CHARGER_RT9458 is not set
 # CONFIG_HWMON is not set
