--- a/drivers/misc/mediatek/sensors-1.0/Kconfig
+++ b/drivers/misc/mediatek/sensors-1.0/Kconfig
@@ -16,4 +16,4 @@ source "drivers/misc/mediatek/sensors-1.0/sensorHub/Kconfig"
 source "drivers/misc/mediatek/sensors-1.0/biometric/Kconfig"
 source "drivers/misc/mediatek/sensors-1.0/high_freq_sensor/Kconfig"
 source "drivers/misc/mediatek/sensors-1.0/tilt_detector_sensor/Kconfig"
-source "drivers/misc/mediatek/sensors-1.0/heart_rate/Kconfig"
+source "drivers/misc/mediatek/sensors-1.0/heart_rate_sensor/Kconfig"
