--- a/drivers/misc/mediatek/sensors-1.0/heart_rate_sensor/pah8001/Makefile
+++ b/drivers/misc/mediatek/sensors-1.0/heart_rate_sensor/pah8001/Makefile
@@ -1,4 +1,4 @@
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/sensors-1.0/hwmon/include
-ccflags-y += -I$(srctree)/drivers/misc/mediatek/sensors-1.0/heart_rate
+ccflags-y += -I$(srctree)/drivers/misc/mediatek/sensors-1.0/heart_rate_sensor
 
 obj-y := pah8001_driver.o pah8001_led_ctrl.o
